--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,5 +51,8 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
+    
+    <script data-ad-client="ca-pub-9303980382381883" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
     <script></script>
 </head>
